--- a/src/components/Search/__stories__/Search.stories.mdx
+++ b/src/components/Search/__stories__/Search.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import Search from "../Search";
-import { createComponentTemplate, createStoryMetaSettings } from "../../../storybook";
+import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
 import DialogContentContainer from "../../DialogContentContainer/DialogContentContainer";
 import Combobox from "../../Combobox/Combobox";
 import { Link, RelatedComponents, Tip, UsageGuidelines } from "../../../storybook/components";
@@ -11,7 +11,7 @@ import {
 } from "../../../storybook/components/related-components/component-description-map";
 import "./Search.stories.scss";
 
-export const metaSettings = createStoryMetaSettings({
+export const metaSettings = createStoryMetaSettingsDecorator({
   component: Search,
   enumPropNamesArray: ["type", "size"],
   iconPropNamesArray: ["secondaryIconName", "iconName"]
