--- a/src/components/ButtonGroup/__stories__/buttonGroup.stories.mdx
+++ b/src/components/ButtonGroup/__stories__/buttonGroup.stories.mdx
@@ -1,12 +1,12 @@
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import ButtonGroup from "../ButtonGroup";
-import { createComponentTemplate, createStoryMetaSettings, Link} from "../../../storybook";
+import { createComponentTemplate, createStoryMetaSettingsDecorator, Link} from "../../../storybook";
 import { Mobile } from "../../Icon/Icons";
 import { BUTTON, TABS, BREADCRUBMS } from "../../../storybook/components/related-components/component-description-map";
 import Desktop from "./assets/Desktop.js";
 import "./buttonGroup.stories.scss";
 
-export const metaSettings = createStoryMetaSettings({
+export const metaSettings = createStoryMetaSettingsDecorator({
   component: ButtonGroup,
   enumPropNamesArray: ["kind", "size"],
   actionPropsArray: ["onSelect"]
