--- a/src/components/Counter/__stories__/counter.stories.mdx
+++ b/src/components/Counter/__stories__/counter.stories.mdx
@@ -1,7 +1,7 @@
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import { useCallback, useEffect, useState } from "react";
 import Counter from "../Counter";
-import { createComponentTemplate, createStoryMetaSettings } from "../../../storybook";
+import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
 import { CHIP, LABEL, TOOLTIP } from "../../../storybook/components/related-components/component-description-map";
 import Avatar from "../../Avatar/Avatar";
 import { AddUpdate, Notifications, Update } from "../../Icon/Icons";
@@ -9,7 +9,7 @@ import Icon from "../../Icon/Icon";
 import { Link } from "../../../storybook/components";
 import "./counter.stories.scss";
 
-export const metaSettings = createStoryMetaSettings({
+export const metaSettings = createStoryMetaSettingsDecorator({
   component: Counter,
   enumPropNamesArray: ["size", "color", "kind", ]
 });
