--- a/src/components/DatePicker/__stories__/datepicker.stories.mdx
+++ b/src/components/DatePicker/__stories__/datepicker.stories.mdx
@@ -2,7 +2,7 @@ import { useState } from "react";
 import moment from "moment";
 import DatePicker from "../DatePicker";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
-import { createComponentTemplate, createStoryMetaSettings } from "../../../storybook";
+import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
 import {
   TEXT_FIELD,
   DROPDOWN,
@@ -11,7 +11,7 @@ import {
 import styles from "./DatePicker.stories.module.scss";
 import DialogContentContainer from "../../DialogContentContainer/DialogContentContainer";
 
-export const metaSettings = createStoryMetaSettings({
+export const metaSettings = createStoryMetaSettingsDecorator({
   component: DatePicker,
   actionPropsArray: ["onPickDate"]
 });
