--- a/src/components/Dialog/__stories__/Dialog.stories.mdx
+++ b/src/components/Dialog/__stories__/Dialog.stories.mdx
@@ -1,6 +1,6 @@
 import Dialog from "../Dialog";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
-import { createStoryMetaSettings, Link } from "../../../storybook";
+import { createStoryMetaSettingsDecorator, Link } from "../../../storybook";
 import { Button, DialogContentContainer, IconButton, AttentionBox } from "../../../components";
 import { ExampleContent } from "./helpers";
 import { Info } from "../../Icon/Icons";
@@ -21,7 +21,7 @@ import Flex from "../../Flex/Flex";
 import useSwitch from "../../../hooks/useSwitch";
 import "./Dialog.stories.scss";
 
-export const metaSettings = createStoryMetaSettings({
+export const metaSettings = createStoryMetaSettingsDecorator({
   component: Dialog,
   enumPropNamesArray: [], // List enum props here
   iconPropNamesArray: [], // List props that are typed as icons here
