--- a/src/components/Menu/MenuItem/__stories__/MenuItem.stories.mdx
+++ b/src/components/Menu/MenuItem/__stories__/MenuItem.stories.mdx
@@ -1,5 +1,5 @@
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
-import { createStoryMetaSettings } from "../../../../storybook/functions/createStoryMetaSettings";
+import { createStoryMetaSettingsDecorator } from "../../../../storybook/functions/createStoryMetaSettingsDecorator";
 import {
   menuItemIconsTemplate,
   menuItemIconsWithColorsTemplate,
@@ -10,7 +10,7 @@ import {
 } from "./MenuItem.stories";
 import MenuItem from "../MenuItem";
 
-export const metaSettings = createStoryMetaSettings({
+export const metaSettings = createStoryMetaSettingsDecorator({
   component: MenuItem,
   enumPropNamesArray: ["tooltipPosition"],
   iconPropNamesArray: ["icon"]
