--- a/src/components/MenuButton/__stories__/MenuButton.stories.mdx
+++ b/src/components/MenuButton/__stories__/MenuButton.stories.mdx
@@ -1,7 +1,7 @@
 import MenuButton from "../MenuButton";
 import { noop as NOOP } from "lodash-es";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
-import { createComponentTemplate, createStoryMetaSettings } from "../../../storybook";
+import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
 import { Menu, MenuItem, MenuTitle } from "../../index";
 import {
   BUTTON,
@@ -11,7 +11,7 @@ import {
 import { DropdownChevronDown, Favorite, Moon, Sun } from "../../Icon/Icons";
 import MoveArrowDown from "../../Icon/Icons/components/MoveArrowDown";
 
-export const metaSettings = createStoryMetaSettings({
+export const metaSettings = createStoryMetaSettingsDecorator({
   component: MenuButton,
   iconPropNamesArray: ["component"],
     actionPropsArray: ["onMenuHide", "onMenuShow"]
