--- a/src/components/ProgressBars/LinearProgressBar/__stories__/linearProgressBar.stories.mdx
+++ b/src/components/ProgressBars/LinearProgressBar/__stories__/linearProgressBar.stories.mdx
@@ -1,7 +1,7 @@
 import LinearProgressBar from "../LinearProgressBar";
 import { useMemo } from "react";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
-import { createStoryMetaSettings } from "../../../../storybook/functions/createStoryMetaSettings";
+import { createStoryMetaSettingsDecorator } from "../../../../storybook/functions/createStoryMetaSettingsDecorator";
 import colors from "../../../../constants/colors.json";
 import DialogContentContainer from "../../../DialogContentContainer/DialogContentContainer";
 import { Info } from "../../../Icon/Icons";
@@ -16,7 +16,7 @@ import BreadcrumbItem from "../../../BreadcrumbsBar/BreadcrumbItem/BreadcrumbIte
 import BreadcrumbsBar from "../../../BreadcrumbsBar/BreadcrumbsBar";
 import "./linearProgressBar.stories.scss";
 
-export const metaSettings = createStoryMetaSettings({
+export const metaSettings = createStoryMetaSettingsDecorator({
   component: LinearProgressBar,
   enumPropNamesArray: ["size", "barStyle"]
 });
