--- a/src/components/Text/__stories__/Text.stories.mdx
+++ b/src/components/Text/__stories__/Text.stories.mdx
@@ -1,6 +1,6 @@
 import Text from "../Text";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
-import { createComponentTemplate, createStoryMetaSettings, Tip } from "../../../storybook";
+import { createComponentTemplate, createStoryMetaSettingsDecorator, Tip } from "../../../storybook";
 import { Link as StorybookLink } from "../../../storybook";
 import Flex from "../../Flex/Flex";
 import { AlphaWarning } from "../../../storybook/components/alpha-warning/alpha-warning";
@@ -8,7 +8,7 @@ import { ONE_LINE_ELLIPSIS_TEST_ID, OVERFLOW_TEXT_CONTAINER_ID } from "../__test
 import { textOverflowSuite } from "../__tests__/text.interactions";
 import styles from "./Text.stories.module.scss";
 
-export const metaSettings = createStoryMetaSettings({
+export const metaSettings = createStoryMetaSettingsDecorator({
   component: Text,
   enumPropNamesArray: ["sizes", "weights", "colors", { propName: "align", enumName: "align" }], // List enum props here
   iconPropNamesArray: [], // List props that are typed as icons here
