--- a/src/components/Title/__stories__/Title.stories.mdx
+++ b/src/components/Title/__stories__/Title.stories.mdx
@@ -1,5 +1,5 @@
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
-import { createComponentTemplate, createStoryMetaSettings, Tip } from "../../../storybook";
+import { createComponentTemplate, createStoryMetaSettingsDecorator, Tip } from "../../../storybook";
 import Flex from "../../Flex/Flex";
 import { AlphaWarning } from "../../../storybook/components/alpha-warning/alpha-warning";
 import Title from "../Title";
@@ -7,7 +7,7 @@ import { OVERFLOW_TITLE_CONTAINER_ID, ONE_LINE_ELLIPSIS_TEST_ID } from "../__tes
 import styles from "./Title.stories.module.scss";
 import { titleOverflowSuite } from "../__tests__/title.interactions";
 
-export const metaSettings = createStoryMetaSettings({
+export const metaSettings = createStoryMetaSettingsDecorator({
   component: Title,
   enumPropNamesArray: ["types", "weights", "colors", { propName: "align", enumName: "align" }], // List enum props here
   iconPropNamesArray: [], // List props that are typed as icons here
