--- a/src/components/Toast/__stories__/toast.stories.mdx
+++ b/src/components/Toast/__stories__/toast.stories.mdx
@@ -1,7 +1,7 @@
 import { useCallback, useMemo, useState } from "react";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import Toast from "../Toast";
-import { createComponentTemplate, createStoryMetaSettings } from "../../../storybook";
+import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
 import Flex from "../../Flex/Flex";
 import Button from "../../Button/Button";
 import { Link, RelatedComponents, Tip, UsageGuidelines } from "../../../storybook/components";
@@ -13,7 +13,7 @@ import {
 import { Delete } from "../../Icon/Icons";
 import "./toast.stories.scss";
 
-export const metaSettings = createStoryMetaSettings({
+export const metaSettings = createStoryMetaSettingsDecorator({
   component: Toast,
   enumPropNamesArray: ["type"],
   iconPropNamesArray: ["icon"]
