--- a/src/components/Toggle/__stories__/toggle.stories.mdx
+++ b/src/components/Toggle/__stories__/toggle.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import Toggle from "../Toggle";
-import { createComponentTemplate, createStoryMetaSettings } from "../../../storybook";
+import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
 import {
   BUTTON_GROUP,
   CHECKBOX,
@@ -15,7 +15,7 @@ import {
 } from "../../../storybook/components";
 import "./toggle.stories.scss";
 
-export const metaSettings = createStoryMetaSettings({
+export const metaSettings = createStoryMetaSettingsDecorator({
   component: Toggle,
   enumPropNamesArray: [],
   iconPropNamesArray: [],
