--- a/src/components/Loader/__stories__/Loader.stories.mdx
+++ b/src/components/Loader/__stories__/Loader.stories.mdx
@@ -4,7 +4,7 @@ import {
   ComponentRules,
   createComponentTemplate,
   createStoryMetaSettingsDecorator,
-  RelatedComponents,
+  RelatedComponentsDecorator,
   Tip,
   UsageGuidelines
 } from "../../../storybook";
@@ -244,4 +244,4 @@ Indicate the loading status in button if content or an action is loading.
 
 ## Related components
 
-<RelatedComponents componentsNames={[SKELETON, PROGRESS_BAR, BUTTON]} />
+<RelatedComponentsDecorator componentsNames={[SKELETON, PROGRESS_BAR, BUTTON]} />
