--- a/src/components/Slider/__stories__/Slider.stories.mdx
+++ b/src/components/Slider/__stories__/Slider.stories.mdx
@@ -3,7 +3,7 @@ import {
   createComponentTemplate,
   createStoryMetaSettingsDecorator,
   Link,
-  RelatedComponents,
+  RelatedComponentsDecorator,
   Tip,
   UsageGuidelines,
   VerticalStories
@@ -217,4 +217,4 @@ __Important!__ Please use customisation very careful, only if you really need it
 
 ## Related components
 
-<RelatedComponents componentsNames={[PROGRESS_BAR, TOGGLE, WIZARD]} />
+<RelatedComponentsDecorator componentsNames={[PROGRESS_BAR, TOGGLE, WIZARD]} />
