--- a/src/components/Toggle/__stories__/toggle.stories.mdx
+++ b/src/components/Toggle/__stories__/toggle.stories.mdx
@@ -10,7 +10,7 @@ import {
   ComponentRules,
   Link,
   MultipleStoryElementsWrapper,
-  RelatedComponents,
+  RelatedComponentsDecorator,
   UsageGuidelines
 } from "../../../storybook/components";
 import "./toggle.stories.scss";
@@ -169,4 +169,4 @@ In the automations center, a user can turn the automation on or off.
 
 ## Related components
 
-<RelatedComponents componentsNames={[CHECKBOX, RADIO_BUTTON, BUTTON_GROUP]} />
+<RelatedComponentsDecorator componentsNames={[CHECKBOX, RADIO_BUTTON, BUTTON_GROUP]} />
