--- a/src/components/Accordion/Accordion/__stories__/accordion.stories.mdx
+++ b/src/components/Accordion/Accordion/__stories__/accordion.stories.mdx
@@ -8,7 +8,7 @@ import {
   WIZARD
 } from "../../../../storybook/components/related-components/component-description-map";
 import { accordionMultiActivePlaySuite, accordionSingleActivePlaySuite } from "../__tests__/accordion.interactions";
-import { RelatedComponents, UsageGuidelines } from "../../../../storybook";
+import { RelatedComponentsDecorator, UsageGuidelines } from "../../../../storybook";
 import "./accordion.stories.scss";
 
 <Meta
@@ -202,4 +202,4 @@ Only one section can be open at the time
 
 ## Related components
 
-<RelatedComponents componentsNames={[WIZARD, BREADCRUBMS, STEPPER]} />
+<RelatedComponentsDecorator componentsNames={[WIZARD, BREADCRUBMS, STEPPER]} />
