--- a/src/components/Heading/__stories__/Heading.stories.mdx
+++ b/src/components/Heading/__stories__/Heading.stories.mdx
@@ -1,7 +1,7 @@
 import Heading from "../Heading";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
-import { Link, RelatedComponents } from "../../../storybook/components";
+import { Link, RelatedComponentsDecorator } from "../../../storybook/components";
 import Divider from "../../Divider/Divider";
 import Search from "../../Search/Search";
 import Checkbox from "../../Checkbox/Checkbox";
@@ -207,4 +207,4 @@ Our heading component support text highlight.
 
 ## Related components
 
-<RelatedComponents componentsNames={[EDITABLE_HEADING, TEXT_FIELD, SEARCH]} />
+<RelatedComponentsDecorator componentsNames={[EDITABLE_HEADING, TEXT_FIELD, SEARCH]} />
