--- a/src/components/Modal/__stories__/modal.stories.mdx
+++ b/src/components/Modal/__stories__/modal.stories.mdx
@@ -1,6 +1,6 @@
 import { useCallback, useRef, useState } from "react";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
-import { ComponentRules, createStoryMetaSettingsDecorator, RelatedComponents, Tip, UsageGuidelines } from "../../../storybook";
+import { ComponentRules, createStoryMetaSettingsDecorator, RelatedComponentsDecorator, Tip, UsageGuidelines } from "../../../storybook";
 import ModalContent from "../ModalContent/ModalContent";
 import ModalFooter from "../ModalFooter/ModalFooter";
 import ModalHeader from "../ModalHeader/ModalHeader";
@@ -431,4 +431,4 @@ clicking outside. Use this variant in case of sensitive or important messages, a
 
 ## Related components
 
-<RelatedComponents componentsNames={[TOOLTIP, ATTENTION_BOX, TOAST]} />
+<RelatedComponentsDecorator componentsNames={[TOOLTIP, ATTENTION_BOX, TOAST]} />
