--- a/src/components/TextField/__stories__/TextField.stories.mdx
+++ b/src/components/TextField/__stories__/TextField.stories.mdx
@@ -5,7 +5,7 @@ import {
   ComponentRules,
   createComponentTemplate,
   createStoryMetaSettingsDecorator,
-  RelatedComponents,
+  RelatedComponentsDecorator,
   UsageGuidelines
 } from "../../../storybook";
 import { Check, CloseSmall, Email, Show } from "../../Icon/Icons";
@@ -246,4 +246,4 @@ Users can insert text.
 
 ## Related components
 
-<RelatedComponents componentsNames={[DROPDOWN, SEARCH, COMBOBOX]} />
+<RelatedComponentsDecorator componentsNames={[DROPDOWN, SEARCH, COMBOBOX]} />
