--- a/src/storybook/stand-alone-documentaion/colors/colors.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/colors/colors.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta } from "@storybook/addon-docs";
-import { ComponentName, Frame, RelatedComponents } from "../../components";
+import { ComponentName, Frame, RelatedComponentsDecorator } from "../../components";
 import { COLORS, TYPOGRAPHY, SHADOW, SPACING } from "../../components/related-components/component-description-map";
 import { SemanticColors } from "./semantic-colors/semantic-colors";
 import { BackgroundColors } from "./background-colors/background-colors";
@@ -63,4 +63,4 @@ The board’s main strength is its simple and visual appearance. That’s why th
 </Frame>
 
 ## Up next
-<RelatedComponents componentsNames={[TYPOGRAPHY, SHADOW, SPACING]}/>
+<RelatedComponentsDecorator componentsNames={[TYPOGRAPHY, SHADOW, SPACING]}/>
